# agent-marketplace

./: .env.example  .gitmodules  Dockerfile  app.py  bff_router.py  config.py  pyproject.toml
.github/workflows/: deploy.yml  sync-sdk.yml
router/: a2a_caller.py  registry.py  router_agent.py
tests/: test_bff_router.py
